--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+$padding: 15px;
+$color1: #17252a;
+$color2: #2b7a78;
+$color3: #3aafa9;
+$color4: #def2f1;
+$color5: #feffff;
+
+$red: #931a25;
+
+html, body {
+  height: 100%;
+}
+
+body {
+  font-family: "Montserrat", serif;
+  margin: 0;
+
+  #bg {
+    clip-path: polygon(100% 0, 100% 82%, 45% 100%, 0 100%, 0 0);
+    background: #44acab linear-gradient(90deg, #17252a, #2b7a78, #3aafa9, #def2f1, #feffff);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+  }
+}
